# aad-jwt

./: requirements.txt  setup.cfg
aadjwt/: _discovery.py
azjwt/django/: _auth_backend.py  _conf.py  _rest_framework.py  rest_framework.py
docs/: django.md
tests/: conftest.py  test_crypto.py  test_discovery.py  test_hello_django.py
tests/django/: test_auth_backend.py  test_jwtusers.py
tests/helper/djangoproject/azjwtapi/: apps.py  urls.py  views.py
tests/helper/djangoproject/main/: settings.py  urls.py
tests/rest_framework/: test_bearerauthentication.py
