[metadata]
name = aadjwt
version=0.1.0
author = Ivan Georgiev
description = My Django App
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ivangeorgiev/{{ repository-name }}
license = Creative Commons
license_file = LICENSE
classifier =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: Creative Commons
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
keywords =
  authentication
  azure
  jwt

[options]
packages = aadjwt
requires_python = 3.7
install_requires = 
    pyjwt
    requests

[options.extras_require]
test =
    pytest
    pytest-cov
    requests-mock
develop =
    black
docs =
    sphinx

[tool:pytest]
addopts =
    --tb=short
    -rs
    --cov=aadjwt
python_files = 
   test_*.py
testpaths =
    tests
