[metadata]
name = azjwt
version=0.1.1
author = Ivan Georgiev
description = Tools for Azure Actve Directory JWT tokens
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ivangeorgiev/aad-jwt
license = Creative Commons
license_file = LICENSE
classifier =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
keywords =
  authentication
  azure
  jwt

[options]
packages = azjwt
requires_python = 3.7
install_requires = 
    cryptography
    requests

[options.extras_require]
all =
    django>=3.1.0
    drf_yasg
    djangorestframework
    pytest
    pytest-cov
    requests-mock
    black
    sphinx
    pyjwt
django =
    django>=3.1.0
    drf_yasg
    djangorestframework
    pyjwt
test =
    pytest
    pytest-cov
    pytest-django
    requests-mock
develop =
    black  
docs =
    sphinx

[tool:pytest]
DJANGO_SETTINGS_MODULE=main.settings
pythonpath=
    .
    ./tests/helper/djangoproject
addopts =
    --tb=short
    -rs
    --cov=azjwt
    -v
python_files = 
   test_*.py
testpaths =
    tests
